# screamon

./: .gitignore  .gitingore  CLAUDE.md  main.py  pyproject.toml  screamon.py  screamon_legacy.py  settings.conf
src/screamon/: __init__.py  cli.py  config.py  database.py
src/screamon/alerts/: __init__.py  sound.py
src/screamon/capture/: __init__.py  mouse.py  screen.py
src/screamon/detectors/: __init__.py  base.py  local_count.py  overview.py  registry.py  targets.py
src/screamon/esi/: __init__.py  auth.py  client.py  models.py
src/screamon/market/: __init__.py  service.py
src/screamon/monitor/: __init__.py  runner.py
src/screamon/pipeline/: __init__.py  color.py  filters.py  ocr.py  processor.py  templates.py
src/screamon/sde/: __init__.py  loader.py
src/screamon/web/: __init__.py  esi_routes.py  routes.py  server.py
src/screamon/web/static/: app.js  chain.html  chain.js  index.html  style.css
